--- a/part2/js/partials/schedule.html
+++ b/part2/js/partials/schedule.html
@@ -1,3 +1,3 @@
 <section data-ng-repeat="schedule in schedules">
-    {{schedule.title}}
+    {{schedule.title}}, {{schedule.slotsID}}, {{schedule.id}}
 </section>
