--- a/part2/js/partials/schedule.html
+++ b/part2/js/partials/schedule.html
@@ -1,5 +1,3 @@
 <section data-ng-repeat="schedule in schedules">
-    <div class="Mon">
-        <p data-ng-if="schedule.day == 'Monday'">{{schedule.title}}</p>
-    </div>
+        <p>{{schedule.title}}</p>
 </section>
