--- a/part1/local-html/part2/js/partials/schedule.html
+++ b/part1/local-html/part2/js/partials/schedule.html
@@ -1,3 +1,13 @@
-<section data-ng-repeat="schedule in schedules">
-        <p>{{schedule.title}}</p>
-</section>
+<p>There are {{sesscCount}} on</p>
+<table>
+        <tr>
+                <th>title</th>
+                <th>Time</th>
+                <th>Location</th>
+        </tr>
+        <tr data-ng-repeat="schedule in schedules">
+                <td>{{schedule.title}}</td>
+                <td>{{schedule.time}}</td>
+                <td>{{schedule.room}}</td>
+        </tr>
+</table>
