--- a/part2/js/partials/days.html
+++ b/part2/js/partials/days.html
@@ -1,7 +1,7 @@
 <section>
     <table>
         <tr data-ng-repeat="day in days"
-        data-ng-click="selectDay($event, day.day)">
+        data-ng-click="selectDay($event, day)">
             <td>{{day.day}}</td>
         </tr>
     </table>
