--- a/part2/js/partials/schedule.html
+++ b/part2/js/partials/schedule.html
@@ -1,6 +1,8 @@
-<section style="position: relative">
+<section style="position: relative;">
         <div data-ng-show="editorVisible"
-             data-ng-include="'js/partials/session-details.html'">
+             data-ng-include="'js/partials/session-details.html'"
+        id="sessionEdit"
+        class="sessionDetail shadow">
         </div>
 </section>
 
@@ -12,7 +14,7 @@
                 <th>Location</th>
         </tr>
         <tr data-ng-repeat="schedule in schedules"
-            data-ng-click="showSlot($event, schedule.id, ' schedule.id')">
+            data-ng-click="showSlot($event, schedule, ' studentEditor')">
                 <td>{{schedule.title}}</td>
                 <td>{{schedule.time}}</td>
                 <td>{{schedule.room}}</td>
