--- a/part2/js/partials/schedule.html
+++ b/part2/js/partials/schedule.html
@@ -1,11 +1,3 @@
-<section style="position: relative;">
-        <div data-ng-show="editorVisible"
-             data-ng-include="'js/partials/session-details.html'"
-        id="sessionEdit"
-        class="sessionDetail shadow">
-        </div>
-</section>
-
 <p>There are {{sesscCount}} on</p>
 <table>
         <tr>
@@ -14,7 +6,7 @@
                 <th>Location</th>
         </tr>
         <tr data-ng-repeat="schedule in schedules"
-            data-ng-click="showSlot($event, schedule, ' studentEditor')">
+            data-ng-click="selectSlot($event, schedule)">
                 <td>{{schedule.title}}</td>
                 <td>{{schedule.time}}</td>
                 <td>{{schedule.room}}</td>
